--- a/railway.toml
+++ b/railway.toml
@@ -1,5 +1,6 @@
 [build]
 builder = "nixpacks"
+buildCommand = "npm install --prefix frontend && npm run build --prefix frontend"
 
 [deploy]
 startCommand = "uvicorn backend.main:app --host 0.0.0.0 --port $PORT"
