--- a/package.json
+++ b/package.json
@@ -2,15 +2,15 @@
   "name": "fern-sdk-demo-bot-root",
   "version": "1.0.0",
   "private": true,
-  "workspaces": [
-    "frontend"
-  ],
   "scripts": {
-    "build": "cd frontend && npm install && npm run build",
-    "start": "cd backend && uvicorn main:app --host 0.0.0.0 --port $PORT"
+    "postinstall": "cd frontend && npm install",
+    "build": "cd frontend && npm run build"
   },
+  "cacheDirectories": [
+    "frontend/node_modules"
+  ],
   "engines": {
-    "node": ">=18",
+    "node": "18.17.0",
     "npm": ">=8"
   }
 } 
