--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "postinstall": "cd frontend && npm install",
-    "build": "cd frontend && npm run build"
+    "build": "cd frontend && CI=false npm run build"
   },
   "cacheDirectories": [
     "frontend/node_modules"
