--- a/railway.toml
+++ b/railway.toml
@@ -1,8 +1,11 @@
 [build]
 builder = "nixpacks"
-buildCommand = "pip install -r requirements.txt && cd frontend && npm install && npm run build"
+buildCommand = "python3 -m pip install --upgrade pip && pip install -r requirements.txt && cd frontend && npm install && npm run build"
 
 [deploy]
 startCommand = "python -m uvicorn backend.main:app --host 0.0.0.0 --port $PORT"
 healthcheckPath = "/health"
-healthcheckTimeout = 100 
+healthcheckTimeout = 100
+
+[phases.setup]
+nixPkgs = ["python3", "nodejs"] 
