--- a/railway.toml
+++ b/railway.toml
@@ -3,14 +3,25 @@ builder = "nixpacks"
 
 [variables]
 NIXPACKS_PYTHON_VERSION = "3.9"
-NIXPACKS_NODE_VERSION = "18.17.0"
+NIXPACKS_NODE_VERSION = "18"
+NPM_CONFIG_LEGACY_PEER_DEPS = "true"
 PYTHON_VERSION = "3.9"
 NODE_VERSION = "18.17.0"
+
+[phases.setup]
+nixPkgs = ["python39", "nodejs_18"]
+
+[phases.install]
+cmds = [
+    "python3 -m pip install --upgrade pip",
+    "pip install -r requirements.txt",
+    "cd frontend && npm install"
+]
+
+[phases.build]
+cmds = ["cd frontend && CI=false npm run build"]
 
 [deploy]
 startCommand = "python -m uvicorn backend.main:app --host 0.0.0.0 --port $PORT"
 healthcheckPath = "/health"
-healthcheckTimeout = 100
-
-[phases.setup]
-nixPkgs = ["python3", "nodejs"] 
+healthcheckTimeout = 100 
