--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,9 +12,12 @@
     "react-scripts": "5.0.1",
     "tailwindcss": "^3.3.5"
   },
+  "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11"
+  },
   "scripts": {
     "start": "react-scripts start",
-    "build": "CI=false react-scripts build",
+    "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
