--- a/railway.toml
+++ b/railway.toml
@@ -7,26 +7,19 @@ NIXPACKS_NODE_VERSION = "18"
 NPM_CONFIG_LEGACY_PEER_DEPS = "true"
 CI = "false"
 NODE_ENV = "production"
-PYTHON_VERSION = "3.9"
-NODE_VERSION = "18.17.0"
 
 [phases.setup]
 nixPkgs = [
     "python39",
     "python39Packages.pip",
+    "python39Packages.setuptools",
     "nodejs_18"
-]
-cmds = [
-    "ln -sf /nix/store/*-python3*/bin/python3 /usr/local/bin/python3",
-    "ln -sf /nix/store/*-python3*/bin/pip3 /usr/local/bin/pip3",
-    "npm install -g npm@latest",
-    "npm install -g react-scripts@5.0.1"
 ]
 
 [phases.install]
 cmds = [
-    "pip3 install --upgrade pip",
-    "pip3 install -r requirements.txt",
+    "pip install --upgrade pip",
+    "pip install -r requirements.txt",
     "cd frontend && rm -rf node_modules package-lock.json && npm install --legacy-peer-deps"
 ]
 
@@ -37,8 +30,5 @@ cmds = [
     "cd .. && mkdir -p frontend/build/static"
 ]
 
-[start]
-cmd = "python3 -m uvicorn backend.main:app --host 0.0.0.0 --port $PORT"
-
 [deploy]
-startCommand = "/nix/store/*-python3*/bin/python3 -m uvicorn backend.main:app --host 0.0.0.0 --port $PORT"
+startCommand = "uvicorn backend.main:app --host 0.0.0.0 --port $PORT"
