--- a/railway.toml
+++ b/railway.toml
@@ -7,6 +7,7 @@ NIXPACKS_NODE_VERSION = "18"
 NPM_CONFIG_LEGACY_PEER_DEPS = "true"
 CI = "false"
 NODE_ENV = "production"
+PATH = "/opt/venv/bin:$PATH"
 
 [phases.setup]
 nixPkgs = [
@@ -15,9 +16,14 @@ nixPkgs = [
     "python39Packages.setuptools",
     "nodejs_18"
 ]
+cmds = [
+    "python3 -m venv /opt/venv",
+    "source /opt/venv/bin/activate"
+]
 
 [phases.install]
 cmds = [
+    "source /opt/venv/bin/activate",
     "pip install --upgrade pip",
     "pip install -r requirements.txt",
     "cd frontend && rm -rf node_modules package-lock.json && npm install --legacy-peer-deps"
@@ -31,4 +37,4 @@ cmds = [
 ]
 
 [deploy]
-startCommand = "uvicorn backend.main:app --host 0.0.0.0 --port $PORT"
+startCommand = "source /opt/venv/bin/activate && python -m uvicorn backend.main:app --host 0.0.0.0 --port $PORT"
