--- a/railway.toml
+++ b/railway.toml
@@ -7,6 +7,7 @@ NIXPACKS_NODE_VERSION = "18"
 NPM_CONFIG_LEGACY_PEER_DEPS = "true"
 CI = "false"
 NODE_ENV = "production"
+PYTHONPATH = "/nix/store/*-python39-3.9.*/bin"
 
 [phases.setup]
 nixPkgs = [
@@ -19,8 +20,10 @@ nixPkgs = [
 
 [phases.install]
 cmds = [
-    "pip install --upgrade pip",
-    "pip install -r requirements.txt",
+    "which python3",
+    "python3 --version",
+    "python3 -m pip install --upgrade pip",
+    "python3 -m pip install -r requirements.txt",
     "cd frontend && rm -rf node_modules package-lock.json && npm install --legacy-peer-deps"
 ]
 
@@ -32,4 +35,4 @@ cmds = [
 ]
 
 [deploy]
-startCommand = "python -m uvicorn backend.main:app --host 0.0.0.0 --port $PORT --workers 4"
+startCommand = "which python3 && python3 -m uvicorn backend.main:app --host 0.0.0.0 --port $PORT --workers 4"
