--- a/railway.toml
+++ b/railway.toml
@@ -24,7 +24,7 @@ cmds = [
     "python3 --version",
     "python3 -m pip install --upgrade pip",
     "python3 -m pip install -r requirements.txt",
-    "cd frontend && rm -rf node_modules package-lock.json && npm install --legacy-peer-deps"
+    "cd frontend && npm install --legacy-peer-deps && npm install react-scripts --save-dev"
 ]
 
 [phases.build]
