--- a/railway.toml
+++ b/railway.toml
@@ -24,12 +24,13 @@ cmds = [
     "python3 --version",
     "python3 -m pip install --upgrade pip",
     "python3 -m pip install -r requirements.txt",
-    "cd frontend && npm install --legacy-peer-deps && npm install react-scripts@5.0.1 --save-dev"
+    "npm install",
+    "npm run postinstall"
 ]
 
 [phases.build]
 cmds = [
-    "cd frontend && CI=false npm run build",
+    "npm run build",
     "mkdir -p frontend/build/static"
 ]
 
