--- a/package.json
+++ b/package.json
@@ -3,8 +3,10 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
-    "postinstall": "cd frontend && npm install --legacy-peer-deps",
-    "build": "cd frontend && npm run build"
+    "install:frontend": "cd frontend && npm install --legacy-peer-deps",
+    "build:frontend": "cd frontend && npm run build",
+    "postinstall": "npm run install:frontend",
+    "build": "npm run build:frontend"
   },
   "cacheDirectories": [
     "frontend/node_modules"
