--- a/railway.toml
+++ b/railway.toml
@@ -16,7 +16,8 @@ nixPkgs = [
 [phases.install]
 cmds = [
     "python3 -m pip install --upgrade pip",
-    "python3 -m pip install -r requirements.txt"
+    "python3 -m pip install -r requirements.txt",
+    "mkdir -p uploads"
 ]
 
 [deploy]
